fixing overflow with overflow-y:auto instead of scroll

--- a/client/src/assets/style.css
+++ b/client/src/assets/style.css
@@ -3,7 +3,7 @@ body {
   background-repeat: no-repeat;
   background-size: cover;
   background-attachment: fixed;
-  /* overflow:hidden; */
+  /* overflow: hidden; */
 }
 
 
@@ -225,7 +225,9 @@ h1 {
 /* surf report page */
 
 #surfReportPage {
-  overflow-y: scroll;
+  overflow-y: auto;
+  /* overflow: hidden; */
+
 }
 
 .spinner {
